[gd_scene load_steps=20 format=3 uid="uid://istvwwfmi6md"]

[ext_resource type="Script" path="res://Scenes/stage_select.gd" id="1_4myet"]
[ext_resource type="Texture2D" uid="uid://bcqi21a03tnuq" path="res://Art/MiscUI/StageSelect/StageSelectPerun.png" id="2_pt0y4"]
[ext_resource type="Texture2D" uid="uid://cauc25cl7jd5j" path="res://Art/MiscUI/StageSelect/StageSelectVolos.png" id="3_kc3m6"]
[ext_resource type="Texture2D" uid="uid://cqrxym2uxi0ef" path="res://Art/MiscUI/StageSelect/StageSelectPlayer.png" id="4_m2ka4"]
[ext_resource type="Texture2D" uid="uid://lcrd6o25mffw" path="res://Art/MiscUI/StageSelect/StageSelectYaryla.png" id="5_c6ni1"]
[ext_resource type="Texture2D" uid="uid://dkufochgkut14" path="res://Art/MiscUI/StageSelect/StageSelectMarena.png" id="6_bpd5c"]
[ext_resource type="Texture2D" uid="uid://dtv7a52umrwg0" path="res://Art/MiscUI/StageSelect/StageSelectMokosh.png" id="7_jdsie"]
[ext_resource type="Texture2D" uid="uid://d4k2ck5ulsl6j" path="res://Art/MiscUI/StageSelect/StageSelectSvetovit.png" id="8_yoxr7"]
[ext_resource type="Texture2D" uid="uid://bedgfkn33sn3" path="res://Art/MiscUI/StageSelect/StageSelectIntroStage.png" id="9_62bvl"]
[ext_resource type="Texture2D" uid="uid://d2ljsw8poyy3i" path="res://Art/MiscUI/StageSelect/StageSelectSvarog.png" id="10_83xpm"]
[ext_resource type="Texture2D" uid="uid://dpa5fd5j3i0r5" path="res://Art/MiscUI/StageSelect/StageSelectBelobog.png" id="11_77e20"]
[ext_resource type="Texture2D" uid="uid://dywnjtl6h686s" path="res://Art/MiscUI/StageSelect/StageSelectBorders.png" id="12_4cdq1"]
[ext_resource type="Texture2D" uid="uid://c0gect3q0f6gl" path="res://Art/MiscUI/StageSelect/StageSelectCursor.png" id="13_lm1gl"]
[ext_resource type="PackedScene" uid="uid://cqn4n44lubnpt" path="res://Scenes/Misc/effect_audio_player.tscn" id="14_e8j44"]
[ext_resource type="AudioStream" uid="uid://ygbh01damfuj" path="res://Sound/MMX1 - Cursor Move.wav" id="15_yr606"]

[sub_resource type="AtlasTexture" id="AtlasTexture_02etb"]
atlas = ExtResource("13_lm1gl")
region = Rect2(0, 0, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_urddu"]
atlas = ExtResource("13_lm1gl")
region = Rect2(54, 0, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6k8u"]
atlas = ExtResource("13_lm1gl")
region = Rect2(108, 0, 54, 54)

[sub_resource type="SpriteFrames" id="SpriteFrames_oslhr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_02etb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urddu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6k8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urddu")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="StageSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4myet")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0862745, 0.145098, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/AspectRatioContainer"]
layout_mode = 2
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 65
columns = 5

[node name="Perun" type="TextureButton" parent="MarginContainer/AspectRatioContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("2_pt0y4")

[node name="Volos" type="TextureButton" parent="MarginContainer/AspectRatioContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("3_kc3m6")

[node name="PlayerOptions" type="TextureButton" parent="MarginContainer/AspectRatioContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource("4_m2ka4")

[node name="Yaryla" type="TextureButton" parent="MarginContainer/AspectRatioContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource("5_c6ni1")

[node name="Marena" type="TextureButton" parent="MarginContainer/AspectRatioContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource("6_bpd5c")

[node name="Mokosh" type="TextureButton" parent="MarginContainer/AspectRatioContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource("7_jdsie")

[node name="Svetovit" type="TextureButton" parent="MarginContainer/AspectRatioContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource("8_yoxr7")

[node name="IntroStage" type="TextureButton" parent="MarginContainer/AspectRatioContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource("9_62bvl")

[node name="Svarog" type="TextureButton" parent="MarginContainer/AspectRatioContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("10_83xpm")

[node name="Belobog" type="TextureButton" parent="MarginContainer/AspectRatioContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("11_77e20")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/AspectRatioContainer"]
layout_mode = 2
texture = ExtResource("12_4cdq1")

[node name="Cursor" type="AnimatedSprite2D" parent="."]
position = Vector2(336, 173)
sprite_frames = SubResource("SpriteFrames_oslhr")
autoplay = "default"
frame = 2
frame_progress = 0.262852

[node name="EffectAudioPlayer" parent="." instance=ExtResource("14_e8j44")]
stream = ExtResource("15_yr606")

[connection signal="focus_entered" from="MarginContainer/AspectRatioContainer/GridContainer/Perun" to="." method="_on_perun_focus_entered"]
[connection signal="pressed" from="MarginContainer/AspectRatioContainer/GridContainer/Perun" to="." method="_on_stage1_pressed"]
[connection signal="focus_entered" from="MarginContainer/AspectRatioContainer/GridContainer/Volos" to="." method="_on_volos_focus_entered"]
[connection signal="pressed" from="MarginContainer/AspectRatioContainer/GridContainer/Volos" to="." method="_on_stage_2_pressed"]
[connection signal="focus_entered" from="MarginContainer/AspectRatioContainer/GridContainer/PlayerOptions" to="." method="_on_player_options_focus_entered"]
[connection signal="focus_entered" from="MarginContainer/AspectRatioContainer/GridContainer/Yaryla" to="." method="_on_yaryla_focus_entered"]
[connection signal="focus_entered" from="MarginContainer/AspectRatioContainer/GridContainer/Marena" to="." method="_on_marena_focus_entered"]
[connection signal="focus_entered" from="MarginContainer/AspectRatioContainer/GridContainer/Mokosh" to="." method="_on_mokosh_focus_entered"]
[connection signal="focus_entered" from="MarginContainer/AspectRatioContainer/GridContainer/Svetovit" to="." method="_on_svetovit_focus_entered"]
[connection signal="focus_entered" from="MarginContainer/AspectRatioContainer/GridContainer/IntroStage" to="." method="_on_intro_stage_focus_entered"]
[connection signal="focus_entered" from="MarginContainer/AspectRatioContainer/GridContainer/Svarog" to="." method="_on_svarog_focus_entered"]
[connection signal="focus_entered" from="MarginContainer/AspectRatioContainer/GridContainer/Belobog" to="." method="_on_belobog_focus_entered"]
